--- a/auspicious/templates/page/news-details.html
+++ b/auspicious/templates/page/news-details.html
@@ -41,43 +41,23 @@
                     <div class="blog-details-wrapper">
                         <div class="blog-details-img-date-wrap mb-35 aos-init aos-animate" data-aos="fade-up" data-aos-delay="200">
                             <div class="blog-details-img">
-                                <img src="{% static 'assets/landing/assets/img/blog/blog-details.png' %}" alt="">
+                                <img src="{{ news_qs.image.url }}" alt="">
                             </div>
                             <div class="blog-details-date">
-                                <h5>01 <span>May</span></h5>
+                                <h5>{{ news_qs.created_at.date.day }}
+                                    <span>{{ news_qs.created_at|date:"M" }}</span></h5>
                             </div>
                         </div>
                         <div class="blog-meta-2 aos-init aos-animate" data-aos="fade-up" data-aos-delay="200">
-                            <ul>
-                                <li><a href="#">Furniture</a>,</li>
-                                <li>By:<a href="#"> Admin</a></li>
+                            <ul class="non-bullet-list">
+                                <li><a href="#">{{ news_qs.category }}</a>,</li>
+                                <li>By:<a href="#"> {{ news_qs.created_by }}</a></li>
                             </ul>
                         </div>
-                        <h1 data-aos="fade-up" data-aos-delay="200" class="aos-init aos-animate">Lorem ipsum dolor sit amet consec.</h1>
-                        <p data-aos="fade-up" data-aos-delay="200" class="aos-init aos-animate">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut lab et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitatio ullamco laboris nisi ut aliquip ex ea commodo conse Duis aute irure dolor in reprehenderit in voluptate velit esse cillumlt dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa quiq officia deserunt mollit anim id est laborum. </p>
-                        <blockquote class="blockquote-wrap aos-init aos-animate" data-aos="fade-up" data-aos-delay="200">
-                            <div class="quote-img">
-                                <img src="{% static 'assets/landing/assets/img/icon-img/quote.png' %}" alt="">
-                            </div>
-                            <h2>Lorem ipsum dolor sit amet, con adipis elit sed do eiusmod tempor incididunt ut labore et dolore.</h2>
-                            <h4>Jont utdo</h4>
-                        </blockquote>
-                        <p data-aos="fade-up" data-aos-delay="200" class="aos-init aos-animate">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut lab et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitatio ullamco laboris nisi ut aliquip ex ea commodo conse Duis aute irure dolor.</p>
-                        <div class="blog-details-middle-img-wrap">
-                            <div class="row">
-                                <div class="col-md-6 col-sm-6 col-12">
-                                    <div class="blog-details-middle-img mb-30 aos-init aos-animate" data-aos="fade-up" data-aos-delay="200">
-                                        <img src="{% static 'assets/landing/assets/img/blog/blog-details-2.png' %}" alt="">
-                                    </div>
-                                </div>
-                                <div class="col-md-6 col-sm-6 col-12">
-                                    <div class="blog-details-middle-img mb-30 aos-init aos-animate" data-aos="fade-up" data-aos-delay="400">
-                                        <img src="{% static 'assets/landing/assets/img/blog/blog-details-3.png' %}" alt="">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <p data-aos="fade-up" data-aos-delay="200" class="aos-init aos-animate">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut lab et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitatio ullamco laboris nisi ut aliquip ex ea commodo conse Duis aute irure dolor in reprehenderit in voluptate velit esse cillumlt dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa quiq officia deserunt mollit anim id est laborum. </p>
+                        <h1 data-aos="fade-up" data-aos-delay="200" class="aos-init aos-animate">{{ news_qs.title }}</h1>
+                        <p data-aos="fade-up" data-aos-delay="200" class="aos-init aos-animate">
+                            {{ news_qs.description|safe }}
+                        </p>
                         <div class="tag-social-wrap">
                             <div class="tag-wrap aos-init" data-aos="fade-up" data-aos-delay="200">
                                 <span>Tags:</span>
@@ -103,8 +83,10 @@
                                 <img src="{% static 'assets/landing/assets/img/blog/blog-author-2.png' %}" alt="">
                             </div>
                             <div class="blog-author-content-2">
-                                <h2>Admin Name</h2>
-                                <p>Lorem ipsum dolor sit amet, consecteg adipisicing elit sed do eius tempor incididunt ut lab et dolore magna aliqua. Ut enim ad minikl veniam, quis nostrud exercitatio.</p>
+                                <h2>{{ news_qs.created_by.user_profile.get_fullname }}</h2>
+<!--                                <p>Lorem ipsum dolor sit amet, consecteg adipisicing elit
+                                    sed do eius tempor incididunt ut lab et dolore magna aliqua.
+                                    Ut enim ad minikl veniam, quis nostrud exercitatio.</p>-->
                                 <div class="social-icon-style-3">
                                     <a href="#"><i class="fa fa-facebook"></i></a>
                                     <a href="#"><i class="fa fa-dribbble"></i></a>
@@ -114,6 +96,8 @@
                                 </div>
                             </div>
                         </div>
+
+
                         <div class="blog-next-previous-post aos-init" data-aos="fade-up" data-aos-delay="200">
                             <div class="blog-prev-post-wrap">
                                 <div class="blog-prev-post-icon">
@@ -134,43 +118,63 @@
                                 </div>
                             </div>
                         </div>
+
+
+
                         <div class="blog-comment-wrapper">
-                            <h4 class="blog-dec-title aos-init" data-aos="fade-up" data-aos-delay="200">Comments (02)</h4>
+                            <h4 class="blog-dec-title aos-init" data-aos="fade-up" data-aos-delay="200">Comments
+                                ({{ total_comment }})
+                            </h4>
+                            {% for comment in comment_qs %}
                             <div class="single-comment-wrapper single-comment-border aos-init" data-aos="fade-up" data-aos-delay="400">
                                 <div class="blog-comment-img">
                                     <img src="{% static 'assets/landing/assets/img/blog/blog-comment-1.png' %}" alt="">
                                 </div>
+
+
                                 <div class="blog-comment-content">
                                     <div class="comment-info-reply-wrap">
                                         <div class="comment-info">
-                                            <span>October 14, 2020 </span>
-                                            <h4>Anthony Stephens</h4>
+                                            <span>{{ comment.created_at }}</span>
+                                            <h4>{{ comment.commented_by }}</h4>
                                         </div>
                                         <div class="comment-reply">
                                             <a href="#">Reply</a>
                                         </div>
                                     </div>
-                                    <p>Lorem ipsum dolor sit amet, consecteg adipisicing elit sed do eius tempor incididunt ut lab et dolore magna aliqua. Ut enim ad minikl veniam, quis nostrud exercitatio. </p>
+                                    <p>{{ comment.comment }}</p>
                                 </div>
+
+
                             </div>
-                            <div class="single-comment-wrapper single-comment-ml aos-init" data-aos="fade-up" data-aos-delay="600">
-                                <div class="blog-comment-img">
-                                    <img src="{% static 'assets/landing/assets/img/blog/blog-comment-2.png' %}" alt="">
-                                </div>
-                                <div class="blog-comment-content">
-                                    <div class="comment-info-reply-wrap">
-                                        <div class="comment-info">
-                                            <span>October 14, 2020 </span>
-                                            <h4>DX Joxova</h4>
-                                        </div>
-                                        <div class="comment-reply">
-                                            <a href="#">Reply</a>
-                                        </div>
+                                {% for reply in reply_qs %}
+
+                                <div class="single-comment-wrapper single-comment-ml aos-init" data-aos="fade-up" data-aos-delay="600">
+                                    <div class="blog-comment-img">
+                                        <img src="{% static 'assets/landing/assets/img/blog/blog-comment-2.png' %}" alt="">
                                     </div>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmodl tempor incididunt ut labore et dolore </p>
-                                </div>
-                            </div>
-                        </div>
+                                    <div class="blog-comment-content">
+                                        <div class="comment-info-reply-wrap">
+                                            <div class="comment-info">
+                                                <span>{{ reply.created_at }}</span>
+                                                <h4>DX Joxova</h4>
+                                            </div>
+                                            <div class="comment-reply">
+                                                <a href="#">Reply</a>
+                                            </div>
+                                        </div>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmodl tempor incididunt ut labore et dolore </p>
+                                    </div>
+                                </div> <br>
+                                {% endfor %}
+
+
+                            {% endfor %}
+                             </div>
+
+
+
+
                         <div class="blog-comment-form-wrap">
                             <div class="blog-comment-form-title">
                                 <h2 data-aos="fade-up" data-aos-delay="200" class="aos-init">Leave a Reply</h2>
