--- a/auspicious/templates/page/news.html
+++ b/auspicious/templates/page/news.html
@@ -39,35 +39,45 @@
         <div class="container">
             <div class="row">
                 {% for news in news_lists %}
+
                 <div class="col-lg-4 col-md-6">
                     <div class="blog-wrap mb-50 wow fadeInUp" data-wow-duration="2s">
                         <div class="blog-img-date-wrap mb-25">
                             <div class="blog-img">
-                                <a href="{% url 'news_details' %}"><img src={{ news.image.url }} alt=""></a>
+                                <a href="{% url 'news_details' slug=news.slug %}"><img src={{ news.image.url }} alt=""></a>
                             </div>
                             <div class="blog-date">
-                                <h5>{{ news.created_at.date.day }} <span>{{ news.created_at|date:"M" }}</span></h5>
+
+                                    <h5>
+                                        {{ news.created_at.date.day }} <span>{{ news.created_at|date:"M" }}</span>
+                                    </h5>
+
                             </div>
                         </div>
+
                         <div class="blog-content">
                             <div class="blog-meta">
                                 <ul class="non-bullet-list">
                                     <li><a href="">{{ news.category }}</a>,</li>
-                                    <li>By:<a href="#"> Admin</a></li>
+                                    <li>By:<a href="#"> {{ news.created_by }}</a></li>
                                 </ul>
                             </div>
-                                <h3><a href="{% url 'news_details' %}"></a>
-                                    {{ news.title }}
-                                </h3>
+                                <a href="{% url 'news_details' slug=news.slug %}">
+                                    <h3>
+                                        {{ news.title }}
+                                    </h3>
+                                 </a>
                                 <p>
                                 {{ news.description|safe|truncatechars_html:100}}
                                 </p>
                             <div class="blog-btn-2 btn-hover">
-                                <a class="btn hover-border-radius theme-color" href="{% url 'news_details' %}">Read More</a>
+                                <a class="btn hover-border-radius theme-color" href="{% url 'news_details' slug=news.slug %}">Read More</a>
                             </div>
                         </div>
+
                     </div>
                 </div>
+
                 {% endfor %}
 
             </div>
