--- a/auspicious/templates/index.html
+++ b/auspicious/templates/index.html
@@ -322,9 +322,10 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="map">
-                                <iframe
-                                    src="https://www.google.com/maps/place/Auspicious/@23.7936302,90.421609,17z/data=!3m1!4b1!4m5!3m4!1s0x3755c7116de4f1e7:0xafada13c373b91c7!8m2!3d23.7936107!4d90.4236419?hl=en"
-                                    style="border:0;" loading="lazy"></iframe>
+                                    <div style="width: 100%"><iframe width="100%" height="600" frameborder="0"
+                                            scrolling="no" marginheight="0" marginwidth="0"
+                                            src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=+(Auspicious)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
+                                    </div>
                             </div>
                         </div>
                     </div>
