--- a/auspicious/templates/components/header.html
+++ b/auspicious/templates/components/header.html
@@ -62,20 +62,20 @@
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="projectDropdown" role="button"
-                        data-bs-toggle="dropdown" aria-expanded="false">
+                        data-toggle="dropdown" aria-expanded="false">
                         Projects
                     </a>
-                    <ul class="dropdown-menu" aria-labelledby="projectDropdown">
+                    <ul class="dropdown-menu non-bullet-list" aria-labelledby="projectDropdown">
                         <li><a class="dropdown-item" href="{% url 'civil_project' %}">Civil</a></li>
                         <li><a class="dropdown-item" href="{% url 'telecom_project' %}">Telecom</a></li>
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="serviceDropdown" role="button"
-                        data-bs-toggle="dropdown" aria-expanded="false">
+                        data-toggle="dropdown" aria-expanded="false">
                         Services
                     </a>
-                    <ul class="dropdown-menu" aria-labelledby="serviceDropdown">
+                    <ul class="dropdown-menu non-bullet-list" aria-labelledby="serviceDropdown">
                         <li><a class="dropdown-item" href="{% url 'civil_service' %}">Civil</a></li>
                         <li><a class="dropdown-item" href="{% url 'telecom_service' %}">Telecom</a></li>
                     </ul>
