--- a/auspicious/templates/components/header.html
+++ b/auspicious/templates/components/header.html
@@ -61,7 +61,7 @@
                     <a class="nav-link" href="{% url 'about' %}">About Us</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="projectDropdown" role="button"
+                    <a class="nav-link dropdown-toggle" href="" id="projectDropdown" role="button"
                         data-bs-toggle="dropdown" aria-expanded="false">
                         Projects
                     </a>
