Bootstrap Version Moved to 5.00

--- a/auspicious/templates/components/scripts.html
+++ b/auspicious/templates/components/scripts.html
@@ -1,7 +1,7 @@
 {% load static %}
 
-<script src="{% static 'assets/js/popper.min.js' %}"></script>
-<script src="{% static 'assets/js/bootstrap.min.js' %}"></script>
+<!-- <script src="{% static 'assets/js/popper.min.js' %}"></script> -->
+<!-- <script src="{% static 'assets/js/bootstrap.min.js' %}"></script> -->
 
 <!-- Sweet Alert -->
 <script src="{% static 'assets/vendors/sweetalert/sweetalert.min.js' %}"></script>
@@ -14,7 +14,7 @@
 <!-- modernizr js -->
 <script src="{% static 'assets/landing/assets/js/modernizr-2.8.3.min.js' %}"></script>
 <!-- Bootstrap JS -->
-<!-- <script src="{% static 'assets/landing/assets/js/bootstrap.bundle.min.js' %}"></script> -->
+<script src="{% static 'assets/landing/assets/js/bootstrap.bundle.min.js' %}"></script>
 <!-- wow js -->
 <script src="{% static 'assets/landing/assets/js/wow.min.js' %}"></script>
 <!-- Sweet Alert -->
