--- a/auspicious/templates/components/styles.html
+++ b/auspicious/templates/components/styles.html
@@ -17,8 +17,8 @@
 <!-- <link rel="stylesheet" href="{% static 'assets/vendors/fontawesome/all.min.css' %}"> -->
 <link rel="stylesheet" href="{% static 'assets/vendors/fontawesome/font-awesome.min.css' %}">
 <!-- Bootstrap CSS -->
-<!-- <link rel="stylesheet" href="{% static 'assets/landing/assets/css/bootstrap.min.css' %}"> -->
-<link rel="stylesheet" href="{% static 'assets/css/bootstrap.css' %}">
+<link rel="stylesheet" href="{% static 'assets/landing/assets/css/bootstrap.min.css' %}">
+<!-- <link rel="stylesheet" href="{% static 'assets/css/bootstrap.css' %}"> -->
 <!-- Animate CSS -->
 <link rel="stylesheet" href="{% static 'assets/landing/assets/css/animate.css' %}">
 <!-- Owl Carousel CSS -->
