--- a/auspicious/templates/index.html
+++ b/auspicious/templates/index.html
@@ -98,7 +98,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="item-menu">
-                            <ul>
+                            <ul class="non-bullet-list">
                                 <li data-filter=".all" class="active">All</li>
                                 <li data-filter=".ongoing">Ongoing</li>
                                 <li data-filter=".latest">Latest</li>
