--- a/auspicious/templates/components/header.html
+++ b/auspicious/templates/components/header.html
@@ -27,8 +27,8 @@
                         {% else %}
 
                         <li>
-                            <a class="dropdown-item bg-c-danger" href="#" data-toggle="modal"
-                                data-target="#logoutModal">
+                            <a class="dropdown-item bg-c-danger" href="#" data-bs-toggle="modal"
+                                data-bs-target="#logoutModal">
                                 <i class="icon-mid bi bi-box-arrow-left me-2"></i>
                                 Logout
                             </a>
@@ -62,7 +62,7 @@
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="projectDropdown" role="button"
-                        data-toggle="dropdown" aria-expanded="false">
+                        data-bs-toggle="dropdown" aria-expanded="false">
                         Projects
                     </a>
                     <ul class="dropdown-menu non-bullet-list" aria-labelledby="projectDropdown">
@@ -72,7 +72,7 @@
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="serviceDropdown" role="button"
-                        data-toggle="dropdown" aria-expanded="false">
+                        data-bs-toggle="dropdown" aria-expanded="false">
                         Services
                     </a>
                     <ul class="dropdown-menu non-bullet-list" aria-labelledby="serviceDropdown">
@@ -102,4 +102,4 @@
 {% include 'snippets/messages.html' %}
 
 
-{% include "snippets/logout-modal.html" %}
+{% include "snippets/landing-logout-modal.html" %}
