--- a/auspicious/templates/components/header.html
+++ b/auspicious/templates/components/header.html
@@ -15,8 +15,7 @@
                         </li>
                         <li><a href="mailto:info@example.com"><i class="fa fa-envelope"></i><span>Email:</span>
                                 info@example.com</a></li>
-                        <li><a href="#"><i class="fa fa-map-marker"></i><span>Location:</span> 28/A Street, The king
-                                city, USA </a></li>
+                        <li><a href="#"><i class="fa fa-map-marker"></i><span>Location:</span> House# Kha-44(3rd floor), Shajadpur,Bashtala Mashjid Road Gulshan, Dhaka</a></li>
 
                         {% if not request.user.is_authenticated %}
                         <li class="m-2 non-bullet-list">
