--- a/auspicious/templates/page/news-details.html
+++ b/auspicious/templates/page/news-details.html
@@ -74,7 +74,7 @@
                                     <a href="#"><i class="fa fa-pinterest-p"></i></a>
                                 </div>
                                 <div class="comment-digit">
-                                    <a href="#">2 <i class="fa fa-comments"></i></a>
+                                    <a href="#">{{ total_comment }}<i class="fa fa-comments"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -99,22 +99,28 @@
 
 
                         <div class="blog-next-previous-post aos-init" data-aos="fade-up" data-aos-delay="200">
+
                             <div class="blog-prev-post-wrap">
+                                {% if pre_news %}
                                 <div class="blog-prev-post-icon">
                                     <a href="#"><i class="fa fa-angle-left"></i></a>
                                 </div>
+                                {% endif %}
                                 <div class="blog-prev-post-content">
-                                    <h3><a href="#">Lorem ipsum dolor sit amet cons ectetur</a></h3>
-                                    <span>June 25, 2021</span>
+                                    <h3><a href="#">{{ pre_news.title }}</a></h3>
+                                    <span>{{ pre_news.created_at.date }}</span>
                                 </div>
                             </div>
+
                             <div class="blog-next-post-wrap">
+                                {% if next_news %}
                                 <div class="blog-next-post-icon">
                                     <a href="#"> <i class="fa fa-angle-right"></i> </a>
                                 </div>
+                                {% endif %}
                                 <div class="blog-next-post-content">
-                                    <h3><a href="#">Lorem ipsum dolor sit amet cons ectetur</a></h3>
-                                    <span>June 25, 2021</span>
+                                    <h3><a href="#">{{ next_news.title }}</a></h3>
+                                    <span>{{ next_news.created_at.date }}</span>
                                 </div>
                             </div>
                         </div>
@@ -125,7 +131,7 @@
                             <h4 class="blog-dec-title aos-init" data-aos="fade-up" data-aos-delay="200">Comments
                                 ({{ total_comment }})
                             </h4>
-                            {% for comment in comment_qs %}
+                            {% for comment in news_qs.news_comment.all %}
                             <div class="single-comment-wrapper single-comment-border aos-init" data-aos="fade-up" data-aos-delay="400">
                                 <div class="blog-comment-img">
                                     <img src="{% static 'assets/landing/assets/img/blog/blog-comment-1.png' %}" alt="">
@@ -237,10 +243,10 @@
                             </div>
                             <div class="sidebar-list-style-2">
                                 <ul>
-                                    <li><a href="">Blog Grid View (09)</a></li>
-                                    <li><a href="">Latest blog (02)</a></li>
-                                    <li><a href="">Our Blog (12)</a></li>
-                                    <li><a href="">Uncategorized (107)</a></li>
+                                    {% for news_category in news_category_lists %}
+                                    <li><a href="">{{ news_category.title }} ({{ news_category.get_news_count }})</a></li>
+                                    {% endfor %}
+
                                 </ul>
                             </div>
                         </div>
@@ -249,42 +255,21 @@
                                 <h3>Latest Post</h3>
                             </div>
                             <div class="latest-post-wrap">
+                                {% for news in last_three_job_lists %}
                                 <div class="single-latest-post">
                                     <div class="latest-post-img">
-                                        <a href="news-details.html"><img src="{% static 'assets/landing/assets/img/blog/latest-post-1.png' %}" alt=""></a>
+                                        <a href="{% url 'news_details' news.slug %}"><img src="{{ news.image.url }}" alt=""></a>
                                     </div>
                                     <div class="latest-post-content">
-                                        <span>01 May 2021</span>
-                                        <h4><a href="news-details.html">Lorem ipsum dolor sit am conse ctetur adipis</a></h4>
+                                        <span>{{ news.created_at.date }}</span>
+                                        <h4><a href="news-details.html">{{ news.title }}</a></h4>
                                         <div class="latest-post-btn">
                                             <a href="news-details.html">Continue Reading...</a>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="single-latest-post">
-                                    <div class="latest-post-img">
-                                        <a href="news-details.html"><img src="{% static 'assets/landing/assets/img/blog/latest-post-2.png' %}" alt=""></a>
-                                    </div>
-                                    <div class="latest-post-content">
-                                        <span>08 Dec 2020</span>
-                                        <h4><a href="news-details.html">Phasellus vehicula sit amet nibh vitae posuere</a></h4>
-                                        <div class="latest-post-btn">
-                                            <a href="news-details.html">Continue Reading...</a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="single-latest-post">
-                                    <div class="latest-post-img">
-                                        <a href="news-details.html"><img src="{% static 'assets/landing/assets/img/blog/latest-post-3.png" alt=""></a>
-                                    </div>
-                                    <div class="latest-post-content">
-                                        <span>01 Feb 2021</span>
-                                        <h4><a href="news-details.html">Class aptent taciti sociosqu ad litora torquent</a></h4>
-                                        <div class="latest-post-btn">
-                                            <a href="news-details.html">Continue Reading...</a>
-                                        </div>
-                                    </div>
-                                </div>
+                                {% endfor %}
+
                             </div>
                         </div>
                         <div class="sidebar-widget mb-35 aos-init aos-animate" data-aos="fade-up" data-aos-delay="200">
