--- a/auspicious/templates/page/client.html
+++ b/auspicious/templates/page/client.html
@@ -41,96 +41,61 @@
         <div class="container">
             <h3 class="text-center text-uppercase fw-bold mb-4">Sister Concern <span>of Auspicious</span></h3>
             <div class="row">
+                {% for sister_client in sister_client_lists %}
                 <div class="col-md-3 col-6">
                     <div class="sister-item">
-                        <img src="{% static 'assets/landing/assets/img/clients/1.png' %}" class="img-fluid" alt="">
-                        <p>Lorem ipsum dolor</p>
+                        <img src="{{ sister_client.logo.url }}" class="img-fluid" alt="">
+                        <p>{{ sister_client.name }}</p>
                     </div>
                 </div>
-                <div class="col-md-3 col-6">
-                    <div class="sister-item">
-                        <img src="{% static 'assets/landing/assets/img/clients/2.png' %}" class="img-fluid" alt="">
-                        <p>Lorem ipsum dolor</p>
-                    </div>
-                </div>
-                <div class="col-md-3 col-6">
-                    <div class="sister-item">
-                        <img src="{% static 'assets/landing/assets/img/clients/3.png' %}" class="img-fluid" alt="">
-                        <p>Lorem ipsum dolor</p>
-                    </div>
-                </div>
-                <div class="col-md-3 col-6">
-                    <div class="sister-item">
-                        <img src="{% static 'assets/landing/assets/img/clients/4.png' %}" class="img-fluid" alt="">
-                        <p>Lorem ipsum dolor</p>
-                    </div>
-                </div>
+                {% endfor %}
+
             </div>
             <h3 class="text-center text-uppercase fw-bold py-4"><span>Auspicious</span> Enlistment at</h3>
             <div class="row">
+                {% for enlistment in enlistment_client_lists %}
                 <div class="col-md-4 col-6">
                     <div class="sister-item">
-                        <img src="{% static 'assets/landing/assets/img/clients/1.png' %}" class="img-fluid" alt="">
-                        <p>Lorem ipsum dolor</p>
+                        <img src="{{ enlistment.logo.url }}" class="img-fluid" alt="">
+                        <p>{{ enlistment.title }}</p>
                     </div>
                 </div>
-                <div class="col-md-4 col-6">
-                    <div class="sister-item">
-                        <img src="{% static 'assets/landing/assets/img/clients/2.png' %}" class="img-fluid" alt="">
-                        <p>Lorem ipsum dolor</p>
-                    </div>
-                </div>
-                <div class="col-md-4 col-6">
-                    <div class="sister-item">
-                        <img src="{% static 'assets/landing/assets/img/clients/3.png' %}" class="img-fluid" alt="">
-                        <p>Lorem ipsum dolor</p>
-                    </div>
-                </div>
-                <div class="col-md-4 col-6">
-                    <div class="sister-item">
-                        <img src="{% static 'assets/landing/assets/img/clients/4.png' %}" class="img-fluid" alt="">
-                        <p>Lorem ipsum dolor</p>
-                    </div>
-                </div>
-                <div class="col-md-4 col-6">
-                    <div class="sister-item">
-                        <img src="{% static 'assets/landing/assets/img/clients/5.png' %}" class="img-fluid" alt="">
-                        <p>Lorem ipsum dolor</p>
-                    </div>
-                </div>
-                <div class="col-md-4 col-6">
-                    <div class="sister-item">
-                        <img src="{% static 'assets/landing/assets/img/clients/6.png' %}" class="img-fluid" alt="">
-                        <p>Lorem ipsum dolor</p>
-                    </div>
-                </div>
+                {% endfor %}
+
             </div>
             <h3 class="text-center text-uppercase fw-bold py-4">We are <span>Local Representative</span> of</h3>
             <div class="row">
-                <div class="col-md-3 col-6">
+                {% for enlistment in local_client_representative_lists %}
+                <div class="col-md-4 col-6">
                     <div class="sister-item">
-                        <img src="{% static 'assets/landing/assets/img/clients/1.png' %}" class="img-fluid" alt="">
-                        <p>Lorem ipsum dolor</p>
+                        <img src="{{ enlistment.logo.url }}" class="img-fluid" alt="">
+                        <p>{{ enlistment.title }}</p>
                     </div>
                 </div>
-                <div class="col-md-3 col-6">
+                {% endfor %}
+            </div>
+
+            <h3 class="text-center text-uppercase fw-bold py-4">Our<span> Civil</span> Clients</h3>
+            <div class="row">
+                {% for enlistment in civil_client_lists %}
+                <div class="col-md-4 col-6">
                     <div class="sister-item">
-                        <img src="{% static 'assets/landing/assets/img/clients/2.png' %}" class="img-fluid" alt="">
-                        <p>Lorem ipsum dolor</p>
+                        <img src="{{ enlistment.logo.url }}" class="img-fluid" alt="">
+                        <p>{{ enlistment.title }}</p>
                     </div>
                 </div>
-                <div class="col-md-3 col-6">
+                {% endfor %}
+            </div>
+            <h3 class="text-center text-uppercase fw-bold py-4">Our <span>Telecom</span> Clients</h3>
+            <div class="row">
+                {% for enlistment in telecom_client_lists %}
+                <div class="col-md-4 col-6">
                     <div class="sister-item">
-                        <img src="{% static 'assets/landing/assets/img/clients/3.png' %}" class="img-fluid" alt="">
-                        <p>Lorem ipsum dolor</p>
+                        <img src="{{ enlistment.logo.url }}" class="img-fluid" alt="">
+                        <p>{{ enlistment.title }}</p>
                     </div>
                 </div>
-                <div class="col-md-3 col-6">
-                    <div class="sister-item">
-                        <img src="{% static 'assets/landing/assets/img/clients/4.png' %}" class="img-fluid" alt="">
-                        <p>Lorem ipsum dolor</p>
-                    </div>
-                </div>
+                {% endfor %}
             </div>
         </div>
     </div>
