--- a/auspicious/templates/components/header.html
+++ b/auspicious/templates/components/header.html
@@ -11,11 +11,12 @@
             <div class="col-lg-12 offset-lg-2 col-12">
                 <div class="topbar-address">
                     <ul>
-                        <li><a href="tel:+0123456789"><i class="fa fa-phone"></i><span>Phone:</span> +0123456789</a>
+                        <li><a href="tel:+8809611699580"><i class="fa fa-phone"></i><span>Phone:</span> +8809611699580</a>
                         </li>
                         <li><a href="mailto:info@example.com"><i class="fa fa-envelope"></i><span>Email:</span>
-                                info@example.com</a></li>
-                        <li><a href="#"><i class="fa fa-map-marker"></i><span>Location:</span> House# Kha-44(3rd floor), Shajadpur,Bashtala Mashjid Road Gulshan, Dhaka</a></li>
+                                info@auspiciousbd.com</a></li>
+                        <li><a href="https://www.google.com/maps/place/Auspicious/@23.7936326,90.4227344,18z/data=!3m1!4b1!4m5!3m4!1s0x3755c7116de4f1e7:0xafada13c373b91c7!8m2!3d23.7936107!4d90.4236419">
+                            <i class="fa fa-map-marker"></i><span>Location:</span> House# Kha-44(3rd floor), Shajadpur,Bashtala Mashjid Road Gulshan, Dhaka</a></li>
 
                         {% if not request.user.is_authenticated %}
                         <li class="m-2 non-bullet-list">
