--- a/auspicious/templates/page/news-details.html
+++ b/auspicious/templates/page/news-details.html
@@ -103,25 +103,27 @@
                             <div class="blog-prev-post-wrap">
                                 {% if pre_news %}
                                 <div class="blog-prev-post-icon">
-                                    <a href="#"><i class="fa fa-angle-left"></i></a>
+                                    <a href="{% url 'news_details' slug=pre_news.slug %}"><i class="fa fa-angle-left"></i></a>
                                 </div>
-                                {% endif %}
+
                                 <div class="blog-prev-post-content">
-                                    <h3><a href="#">{{ pre_news.title }}</a></h3>
+                                    <h3><a href="{% url 'news_details' pre_news.slug %}">{{ pre_news.title }}</a></h3>
                                     <span>{{ pre_news.created_at.date }}</span>
                                 </div>
+                                {% endif %}
                             </div>
 
                             <div class="blog-next-post-wrap">
                                 {% if next_news %}
                                 <div class="blog-next-post-icon">
-                                    <a href="#"> <i class="fa fa-angle-right"></i> </a>
+                                    <a href="{% url 'news_details' slug=next_news.slug %}"> <i class="fa fa-angle-right"></i> </a>
                                 </div>
-                                {% endif %}
+
                                 <div class="blog-next-post-content">
-                                    <h3><a href="#">{{ next_news.title }}</a></h3>
+                                    <h3><a href="{% url 'news_details' slug=next_news.slug %}">{{ next_news.title }}</a></h3>
                                     <span>{{ next_news.created_at.date }}</span>
                                 </div>
+                                {% endif %}
                             </div>
                         </div>
 
