--- a/static/assets/landing/assets/css/custom.css
+++ b/static/assets/landing/assets/css/custom.css
@@ -1,5 +1,5 @@
 .career-area .category-item:hover {
-    background-color: blue !important;
+   background-image: linear-gradient(#7ad1f5, #3492d0);
 }
 
 ul {
