--- a/auspicious/templates/index.html
+++ b/auspicious/templates/index.html
@@ -194,14 +194,16 @@
 
                             <div class="news">
                                 {% for news in latest_news_lists %}
+                                <a href="{% url 'news_details' slug=news.slug %}">
 
                                 <div class="item">
-                                    <img src="{{ news.image.url }}" alt="">
+                                    <img src="{{ news.image.url }}" alt="" style="height: 250px; width: 250px;">
                                     <div class="overlay">
                                         <p>{{news.description|safe|truncatechars_html:10 }}</p>
                                         <h4>{{ news.title }}</h4>
                                     </div>
                                 </div>
+                            </a>
                                 {% endfor %}
 
                             </div>
@@ -225,7 +227,7 @@
                                 <h4>Gallery</h4>
                             </div>
                             <div class="col-4 text-end">
-                                <a href="" class="">View all</a>
+                                <a href="{% url 'gallery' %}" class="">View all</a>
                             </div>
                         </div>
                     </div>
@@ -300,7 +302,7 @@
                                 <h4>Clients & Sister Concern</h4>
                             </div>
                             <div class="col-4 text-end">
-                                <a href="client.html" class="">View all</a>
+                                <a href="{% url 'client' %}" class="">View all</a>
                             </div>
                         </div>
                     </div>
@@ -309,7 +311,7 @@
                             <div class="clients-items owl-carousel owl-theme text-center">
                                 {% for clients in clients_lists %}
                                 <div class="single-item">
-                                    <a href="#"><img src="{{ clients.logo.url }}"
+                                    <a href="{% url 'client' %}"><img src="{{ clients.logo.url }}"
                                             alt="{{ clients.name }}"></a>
                                 </div>
                                 {% endfor %}
