--- a/auspicious/templates/page/news.html
+++ b/auspicious/templates/page/news.html
@@ -17,7 +17,12 @@
                 <!-- Breadcrumbs-Content -->
                 <div class="col-lg-7 col-md-7 col-12">
                     <div class="breadcrumbs-content">
+                        
+                        {% if filtered_news_title %}
+                        <h2>{{ filtered_news_title }}</h2>
+                        {% else %}
                         <h2>News</h2>
+                        {% endif %}
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                     </div>
                 </div>
