--- a/auspicious/templates/components/header.html
+++ b/auspicious/templates/components/header.html
@@ -90,6 +90,9 @@
                     <a class="nav-link" href="{% url 'news' %}">News</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="{% url 'gallery' %}">Gallery</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="{% url 'contact' %}">Contact</a>
                 </li>
             </ul>
