--- a/dashboard/templates/dashboard/snippets/manage.html
+++ b/dashboard/templates/dashboard/snippets/manage.html
@@ -129,6 +129,11 @@
     });
 </script>
 
+<!-- EZ View JS -->
+<script src="{% static 'assets/vendors/ez-view/EZView.js' %}"></script>
+<script src="{% static 'assets/vendors/ez-view/draggable.js' %}"></script>
+<script src="{% static 'assets/vendors/ez-view/ez-conf.js' %}"></script>
+
 <!-- Open Modal With Update URL -->
 <script>
     $(document).ready(function () {
