--- a/dashboard/templates/dashboard/snippets/list-common.html
+++ b/dashboard/templates/dashboard/snippets/list-common.html
@@ -7,8 +7,10 @@
 {% block additional_css %}
 <!-- JQuery DataTable CSS -->
 <!-- <link rel="stylesheet" type="text/css" href="{% static 'assets/vendors/jquery-datatable/jquery.dataTables.min.css' %}" /> -->
-<link rel="stylesheet" type="text/css" href="{% static 'assets/vendors/jquery-datatable/dataTables.bootstrap4.min.css' %}" />
-<link rel="stylesheet" type="text/css" href="{% static 'assets/vendors/jquery-datatable/buttons.dataTables.min.css' %}" />
+<link rel="stylesheet" type="text/css"
+    href="{% static 'assets/vendors/jquery-datatable/dataTables.bootstrap4.min.css' %}" />
+<link rel="stylesheet" type="text/css"
+    href="{% static 'assets/vendors/jquery-datatable/buttons.dataTables.min.css' %}" />
 <link rel="stylesheet" type="text/css" href="{% static 'assets/vendors/jquery-datatable/datatable-custom.css' %}" />
 {% endblock %}
 
@@ -28,7 +30,6 @@
 
 
 {% if can_view == True %}
-
 <!-- Page content -->
 <div class="container-fluid mt--6">
     <div class="row">
@@ -36,19 +37,22 @@
             <div class="card">
                 <!-- Card header -->
                 <div class="card-header border-0 text-center">
-                    <h3 class="mb-0">{{ page_title }}</h3>
+                    <h3 class="mb-0">{{ namespace|title }} List</h3>
                 </div>
                 <!-- Light table -->
                 <div class="table-responsive">
-                    <table id="list-datatable" class="display table table-striped table-bordered align-items-center table-flush
-                        table-hover cell-border"
+                    <table id="list-datatable" class="display table align-items-center table-flush table-hover"
                         style="width:100%">
                         <thead class="thead-dark">
-                            <tr>
+                            <tr class="text-center">
+                                {% if not update_url == None or not detail_url == None or not delete_url == None %}
                                 <th>Action</th>
+                                {% endif %}
                                 <th>#</th>
                                 {% for key, value in fields.items %}
+                                {% if not key in fields_to_hide_in_table %}
                                 <th>{{ value|remove_id|title }}</th>
+                                {% endif %}
                                 {% endfor %}
                             </tr>
                         </thead>
@@ -57,38 +61,116 @@
 
                             <!-- table body -->
                             {% for object in list_objects %}
+                            <tr class="text-center">
+                                
+                                {% if not update_url == None or not detail_url == None or not delete_url == None %}
+                                <td style="width:14%">
+                                    <!-- update url -->
+                                    {% if not update_url == None and can_add_change == True %}
+                                    {% if not object.slug == None %}
+                                    <a href="{% url update_url slug=object.slug %}"
+                                        class="btn btn-primary btn-sm text-deco-none">
+                                        <span class="">
+                                            Edit
+                                        </span>
+                                    </a>
+                                    {% else %}
+                                    <a href="{% url update_url id=object.id %}"
+                                        class="btn btn-primary btn-sm text-deco-none">
+                                        <span class="">
+                                            Edit
+                                        </span>
+                                    </a>
+                                    {% endif %}
+                                    {% endif %}
 
-                            <tr>
-                                <td>
                                     {% if not detail_url == None and can_view == True %}
                                     {% if not object.slug == None %}
                                     <a href="{% url detail_url slug=object.slug %}"
-                                        class="btn btn-primary btn-sm text-deco-none">
+                                        class="btn btn-info btn-sm text-deco-none">
                                         <span class="">
                                             View
                                         </span>
                                     </a>
                                     {% else %}
                                     <a href="{% url detail_url id=object.id %}"
-                                        class="btn btn-primary btn-sm text-deco-none">
+                                        class="btn btn-info btn-sm text-deco-none">
                                         <span class="">
                                             View
                                         </span>
                                     </a>
                                     {% endif %}
                                     {% endif %}
-                                </td>
 
-                                <th scope="row">{{ forloop.counter }}</th>
-                                {% for label, value in object.get_fields %}
+                                    {% if not delete_url == None and can_delete == True %}
+                                    {% if not object.slug == None %}
+                                    <button type="button"
+                                        class="btn btn-danger btn-sm text-deco-none bg-c-danger m-1 js_delete_{{namespace}}"
+                                        value="{{object.slug}}" data-toggle="modal"
+                                        data-target="#modal-delete-{{namespace}}">
+                                        Delete
+                                    </button>
+                                    {% else %}
+                                    <button type="button"
+                                        class="btn btn-danger btn-sm text-deco-none bg-c-danger m-1 js_delete_{{namespace}}"
+                                        value="{{object.id}}" data-toggle="modal"
+                                        data-target="#modal-delete-{{namespace}}">
+                                        Delete
+                                    </button>
+                                    {% endif %}
+                                    {% endif %}
+
+                                </td>
+                                {% endif %}
+
+                                <th>{{ forloop.counter }}</th>
+
+                                {% for label, value, field_type in object.get_fields %}
+
+                                {% if not label in fields_to_hide_in_table %}
+
+                                {% if field_type in 'ImageField, FileField' %}
 
                                 <td>
-                                    {{ value }}
+                                    {% if not value.url == None and not value == None and value != "" %}
+                                    
+                                    {% if value.url|get_file_type == "image" %}
+                                    <img class="img-thumbnail ez-view m-2" src="{{ value.url }}" alt="{{ value }}"
+                                        style="height:70px;width:70px;">
+                                    {% elif value.url|get_file_type == "pdf" %}
+                                    <img class="ez-view m-2" style="height:70px;width:70px" src="{% static 'assets/images/icons/pdf.png' %}"
+                                        href="{{ value.url }}" alt="{{ object.title }}">
+                                    {% elif value.url|get_file_type == "document" %}
+                                    <iframe class="doc img-thumbnail m-2" height="50" width="330"
+                                        src="http://docs.google.com/gview?url={{request.scheme}}://{{ request.get_host }}{{ value.url }}&embedded=true">
+                                    </iframe>
+                                    {% else %}
+                                    <span>{{ value.url }}</span>
+                                    {% endif %}
+                                    {% else %}
+                                    ---
+                                    {% endif %}
                                 </td>
 
-                                {% endfor %}
-                            </tr>
+                                {% elif field_type in 'TextField' %}
+                                <td>
+                                    {{ value|truncate_word:30|remove_html_tags }}
+                                </td>
 
+                                {% else %}
+
+                                {% if value == None or value == "" %}
+                                <td>--</td>
+                                {% else %}
+                                <td>{{ value }}</td>
+                                {% endif %}
+                                {% endif %}
+
+                                {% endif %}
+
+                                {% endfor %}
+
+                            </tr>
                             {% empty %}
                             <tr>
                                 <td colspan="{{ fields_count }}" class="text-center">
@@ -102,11 +184,15 @@
                         </tbody>
 
                         <tfoot class="thead-dark">
-                            <tr>
+                            <tr class="text-center">
+                                {% if not update_url == None or not detail_url == None or not delete_url == None %}
                                 <th>Action</th>
+                                {% endif %}
                                 <th>#</th>
                                 {% for key, value in fields.items %}
-                                <th>{{ value|remove_id|upper }}</th>
+                                {% if not key in fields_to_hide_in_table %}
+                                <th>{{ value|remove_id|title }}</th>
+                                {% endif %}
                                 {% endfor %}
                             </tr>
                         </tfoot>
@@ -139,6 +225,7 @@
         });
     });
 </script>
+
 <!-- JQuery DataTable JS -->
 <script src="{% static 'assets/vendors/jquery-datatable/jquery.dataTables.min.js' %}"></script>
 <script src="{% static 'assets/vendors/jquery-datatable/dataTables.bootstrap4.min.js' %}"></script>
@@ -151,10 +238,15 @@
 <script src="{% static 'assets/vendors/jquery-datatable/buttons.print.min.js' %}"></script>
 <script src="{% static 'assets/vendors/jquery-datatable/buttons.colVis.min.js' %}"></script>
 
+<!-- EZ View JS -->
+<script src="{% static 'assets/vendors/ez-view/EZView.js' %}"></script>
+<script src="{% static 'assets/vendors/ez-view/draggable.js' %}"></script>
+<script src="{% static 'assets/vendors/ez-view/ez-conf.js' %}"></script>
+
 {% if not detail_url == None %}
 <script>
-    $(document).ready(function(){
-        $('.point-tr').click(function(){
+    $(document).ready(function () {
+        $('.point-tr').click(function () {
             window.location = $(this).attr('href');
             return false;
         });
