--- a/auspicious/templates/index.html
+++ b/auspicious/templates/index.html
@@ -99,7 +99,7 @@
                     <div class="col-md-12">
                         <div class="item-menu">
                             <ul class="non-bullet-list">
-                                <li data-filter=".all" class="active">All</li>
+                                <li data-filter="" class="active">All</li>
                                 <li data-filter=".ongoing">Ongoing</li>
                                 <li data-filter=".latest">Latest</li>
                                 <li data-filter=".completed">Completed</li>
@@ -110,7 +110,7 @@
                     <div class="project-items">
 
                         <div class="row">
-                            {% for project in project_lists %}
+                            <!-- {% for project in project_lists %}
                             <div class="col-md-3 col-sm-6 item all">
                                 <div class="product-item">
                                     <img src="{{ project.image.url }}" alt="" class="img-fluid" height="150px">
@@ -123,7 +123,7 @@
                                 </div>
 
                             </div>
-                            {% endfor %}
+                            {% endfor %} -->
 
                             {% for project in ongoing_project_lists %}
                             <div class="col-md-3 col-sm-6 item ongoing">
@@ -241,7 +241,7 @@
                             <div class="swiper-slide">
                                 <a href="{{ image.image.url }}"
                                     data-fancybox="gallery">
-                                    <div class="image"
+                                    <div class="image", 
                                         style="background-image: url({{ image.image.url }})">
                                         <div class="overlay">
                                             <em class="mdi mdi-magnify-plus"></em>
