--- a/auspicious/templates/index.html
+++ b/auspicious/templates/index.html
@@ -167,7 +167,7 @@
                                         <p>{{ project.name }}</p>
                                     </div>
                                     <div class="explore">
-                                        <a href="">Explore</a>
+                                        <a href="{% url 'project_details' slug=project.slug %}">Explore</a>
                                     </div>
                                 </div>
 
